@@ -69,6 +69,8 @@ public slots:
 
 	void replaceROM();
 
+	void multiplayerChanged();
+
 	void importSharkport();
 	void exportSharkport();
 
@@ -149,6 +151,7 @@ private:
 	GameController* m_controller;
 	Display* m_display;
 	QList<QAction*> m_gameActions;
+	QList<QAction*> m_nonMpActions;
 	QMap<int, QAction*> m_frameSizes;
 	LogController m_log;
 	LogView* m_logView;
